# hydra

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  README.md  TASKS.md  config.example.toml  handoff.md  pyproject.toml  vulture_whitelist.py
hydra/: __main__.py  _test_violation_demo.py  ai_monitor_schema.py  audit.py  citations.py  cli_check.py  dispatcher.py  gradus_schema.py  indexer.py  json_extract.py  migrations.py  models.py  probe.py  quota.py  report.py  state.py  subprocess_runner.py  tailer.py  watcher.py  web.py  worker.py
hydra/static/: hydra.css  hydra.js
hydra/templates/: live.html  (+2 more)
scripts/: perf_test_local_watcher.py  run_test_suite.sh
tests/: conftest.py  test_audit_writer.py  test_cli_availability.py  test_cli_verbs.py  test_dispatcher_flows.py  test_e2e_session.py  test_indexer.py  test_indexer_incremental.py  test_indexer_skip_rules.py  test_integration_real_clis.py  test_migrations.py  test_models_registry.py  test_quota_router.py  test_recording_integrity_fixture.py  test_report_writer.py  test_scaffold.py  test_scarecrow_contract.py  test_session_end_robustness.py  test_session_probe.py  test_state_config.py  test_state_db_schema.py  test_subprocess_cleanup_on_shutdown.py  test_tailer.py  test_watcher_dedup.py  test_watcher_fallback.py  test_web_routes.py  test_web_sse.py  test_worker_citation_validation.py  test_worker_json_extraction.py  test_worker_subprocess.py
ui_tests/: keyboard_shortcuts.spec.ts  live_updates.spec.ts  package.json  playwright.config.ts  pnpm-lock.yaml  post_session_review.spec.ts  preflight.spec.ts  tsconfig.json
(+14 files in other folders)
