[project]
name = "hydra"
version = "0.1.0"
description = "Real-time research agent companion for Scarecrow meeting transcriptions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "watchdog>=6.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "mlx-vlm>=0.4",
]
# ai_monitor is invoked via subprocess (`python3 -m ai_monitor --json --once`),
# not imported. It must be installed separately on the user's machine; it is
# not a Python dependency of this package.

[project.scripts]
hydra = "hydra.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hydra"]

[tool.ruff]
target-version = "py312"
src = [".", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["hydra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real LLM CLIs (slow, costs tokens)",
]
addopts = "-m 'not integration'"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-mock>=3.14",
    "ruff>=0.15",
    "vulture>=2.15",
    "httpx>=0.28",
]
